<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
  <!--  <item
        android:id="@+id/nav_tab_activity"
        android:icon="@drawable/dashboard"

        android:title="Home" />-->
        <item
            android:id="@+id/nav_my_grievance"
            android:icon="@drawable/grievance_history"

            android:title="@string/view_Grievances" />


        <item
            android:id="@+id/nav_my_edit_profile"
            android:icon="@drawable/edit"

            android:title="@string/edit_Profile" />


    </group>

    <item android:title="@string/exit">
        <menu>
            <item
                android:id="@+id/nav_log_out"

                android:icon="@drawable/logout"
                android:title="@string/sign_Out" />

        </menu>
    </item>


</menu>
