<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_profile2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/go_Back"
        android:id="@+id/back"
        android:paddingLeft="20dp"
        android:drawablePadding="@dimen/dimen_5"
        android:drawableLeft="@drawable/ic_arrow_back_white_16dp"
        android:textColor="@color/white"
        android:background="@color/green"
        android:paddingTop="@dimen/dimen_12"
        android:paddingBottom="@dimen/dimen_12"
        />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_Profile"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/eventtitle"

            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtname">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:id="@+id/edname"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtaddress">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Address"
                android:inputType="text"
                android:id="@+id/edaddress"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtstate">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/State"
                android:id="@+id/edstate"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtdistrict">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/District"
                android:id="@+id/eddistrict"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtcity">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/City"
                android:id="@+id/edcity"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtpin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Pin_Code"
                android:id="@+id/edpin"
                android:focusable="false"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>


        <!--

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtloksabhaconstituency">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Lok_Sabha_Constituency"
                android:id="@+id/edloksabhaconstituency"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtconstituency">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Vidhan_Sabha_Constituency"
                android:id="@+id/edconstituency"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>



        -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/txtward">

            <EditText
                android:id="@+id/edward"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Ward_Name"
                android:inputType="text"
                android:layout_gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/txtmandal">

            <EditText
                android:id="@+id/edmandal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Mandal_Name"
                android:inputType="text"
                android:layout_gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/txtmobilenumber">

            <EditText
                android:id="@+id/edmobilenumber"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Mobile_Number"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/edemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gender"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/rbggender"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:checked="true"
                android:id="@+id/rbmale"
                android:layout_weight="0.2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:id="@+id/rbfemale"
                android:layout_weight="0.2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Other"
                android:id="@+id/rbother"
                android:layout_weight="0.2"/>

        </RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:id="@+id/txtdob">

            <EditText
                android:id="@+id/eddob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:focusable="false"
                android:layout_gravity="center"/>
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/txtpic"

            android:text="@string/Profile_pic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btnSelectPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_camera_enhance_black_24dp" />


            <ImageView
                android:layout_weight="0.5"
                android:id="@+id/ivImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/noimage" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Area"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edarea"
                android:inputType="text"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>



<!--

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/txtpoliticalparty">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Vidhan Sabha Constituency"
                android:id="@+id/edpoliticalparty"
                android:focusable="false"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Political Party:"
                android:layout_marginTop="20dp"


                />
            <Spinner
                android:id="@+id/sppoliticalparty"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:prompt="@string/spinner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:background="@color/dim_foreground_holo_dark"
                android:layout_height="2dp"/>
        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Others"
                android:id="@+id/edother"
                android:inputType="text"
                android:visibility="gone"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <Button
                android:id="@+id/btnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/save"

                android:drawableRight="@drawable/save"

                android:textSize="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/bjpsquarewhitebtn"
                android:textColor="@color/btnblue"
                />

            <Button
                android:id="@+id/btnchangpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentRight="true"

                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Change Password"

                android:visibility="gone"
                android:textSize="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/squarewhitebtn"
                />

        </RelativeLayout>


    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
