<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mail_This_Grievance_To"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="5dp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10"

        >

        <EditText
            android:id="@+id/edemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Recipient_Mail_Id"
            android:inputType="textEmailAddress"
             />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="5dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="@dimen/dimen_10"
            android:id="@+id/btncancel"
            android:background="@drawable/squarewhitebtn"
            android:layout_marginRight="@dimen/dimen_10"
            android:text="@string/Cancel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="@dimen/dimen_10"
            android:id="@+id/btnsend"
            android:layout_marginLeft="@dimen/dimen_10"
            android:background="@drawable/squarewhitebtn"
            android:text="@string/send"/>
    </LinearLayout>

</LinearLayout>